# ufsatm

./: .gitmodules  CMakeLists.txt  fv3_cap.F90  ufsatm_cap.F90
ccpp/: CCPP_driver.F90
ci/: CMakeLists.txt
cpl/: module_cap_cpl.F90  module_cplfields.F90
fv3/: atmos_model.F90  fv3_cap.F90  module_fcst_grid_comp.F90  module_fv3_config.F90
io/: module_fv3_io_def.F90  module_write_restart_netcdf.F90  module_wrt_grid_comp.F90  post_fv3.F90
log_false/: ufs_trace_00000000.trace  ufs_trace_00000004.trace  ufs_trace_00000008.trace  ufs_trace_00000012.trace  ufs_trace_00000016.trace  ufs_trace_00000020.trace  ufs_trace_00000024.trace  ufs_trace_00000028.trace  ufs_trace_00000032.trace  ufs_trace_00000036.trace  ufs_trace_00000040.trace  ufs_trace_00000044.trace  ufs_trace_00000048.trace  ufs_trace_00000052.trace  ufs_trace_00000056.trace  ufs_trace_00000060.trace  ufs_trace_00000064.trace  ufs_trace_00000068.trace  ufs_trace_00000072.trace  ufs_trace_00000076.trace  ufs_trace_00000080.trace  ufs_trace_00000084.trace  ufs_trace_00000088.trace  ufs_trace_00000092.trace  ufs_trace_00000096.trace  ufs_trace_00000100.trace  ufs_trace_00000104.trace  ufs_trace_00000108.trace  ufs_trace_00000112.trace  ufs_trace_00000116.trace  ufs_trace_00000120.trace  ufs_trace_00000124.trace  ufs_trace_00000128.trace  ufs_trace_00000132.trace  ufs_trace_00000136.trace  (+26 more)
tests/: CMakeLists.txt  test_atmos_model.F90  test_atmos_model.F90.wip  test_calcdist.F90  test_check_validity.F90  test_clean_lon_lat.F90  test_fv3_cap.F90  test_fv_tracker.F90  test_fve_cap.F90  test_module_wrt_grid_comp.F90
(+419 files in other folders)
